Version 1.25 Merge from Master: Fixing vertical-align on the bin icon on the password matrix Renaming README to be .md Update README.md

--- a/Client/Extension/css/passwordMatrix.css
+++ b/Client/Extension/css/passwordMatrix.css
@@ -144,6 +144,9 @@ img.explodeIcon {
 ul.styled li .binIcon {
 	margin: 0px;
 	padding: 0px;
-	
 	top: 0ex;
+}
+
+ul.styled li .binIcon img {
+	vertical-align: middle;
 }
